# maqui_core

./: CMakeLists.txt  README.md  package.xml  setup.py
maqui_joy/: CMakeLists.txt  README.md  package.xml  setup.py
maqui_joy/config/: driver.yaml  joystick_base.yaml  joystick_demo.yaml  joystick_head.yaml  (+2 more)
maqui_sim/: CMakeLists.txt  README.md  package.xml
maqui_sim/launch/: maqui.launch
maqui_sim/maqui_gazebo/: CMakeLists.txt  README.md  package.xml
maqui_sim/maqui_gazebo/config/: maqui_gazebo.rviz  maqui_gazebo_dashboard.perspective
maqui_sim/maqui_gazebo/launch/: gmapping_sim.launch  laser_merge.launch  maqui.launch  rviz.launch
maqui_sim/maqui_gazebo/launch/localization_sim/: amcl_sim.launch.xml  localization_sim.launch  odometry_sim.launch.xml  visual_sim.launch.xml
maqui_sim/maqui_gazebo/launch/navigation_sim/: goal_server_sim.launch.xml  move_base_sim.launch.xml  navigation_sim.launch  slam_sim.launch
maqui_sim/maqui_gazebo/params/localization_sim/: amcl_sim.yaml  fake_sim.yaml  gmapping_sim.yaml  visual_sim.yaml
maqui_sim/maqui_gazebo/params/navigation_sim/: costmap_common_sim_params.yaml  dwa_local_planner_sim_params.yaml  move_base_sim_params.yaml
maqui_sim/maqui_gazebo/params/rviz_sim/: common.rviz  maqui.rviz  new_popper.rviz  popper_virtual.rviz  virtual_popper.rviz
maqui_sim/maqui_gazebo/src/: basic_motion.py  dummy_naoqi.py  emergency_stop.py
maqui_sim/maqui_gazebo/worlds/: test.world
maqui_sim/maqui_sim/: CMakeLists.txt  package.xml
maqui_skills/: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: arm_test.py
(+20 files in other folders)
