<?xml version="1.0"?>
<package>
  <name>maqui_sim</name>
  <version>0.0.0</version>
  <description>Simulation for Maqui robot (Aldebaran Pepper)</description>

  <maintainer email="rmunozriffo@ing.uchile.cl">rodrigo munoz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pepper_gazebo_plugin</build_depend>
  <run_depend>pepper_gazebo_plugin</run_depend>

</package>
